--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "dependencies": {
     "ionic": "v1.1.0",
-    "ngCordova": "v0.1.20-alpha"
+    "ngCordova": "v0.1.20-alpha",
+    "Angular.uuid2": "angular-uuid2#*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
@@ -13,4 +14,3 @@
     "angular": ">= 1.3.6"
   }
 }
-
