--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,16 @@
   "dependencies": {
     "ionic": "v1.1.0",
     "ngCordova": "v0.1.20-alpha",
-    "Angular.uuid2": "angular-uuid2#*"
+    "Angular.uuid2": "angular-uuid2#*",
+    "angular-moment": "^0.10.3",
+    "moment": "^2.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
     "angular-scenario": "~1.3.6"
   },
   "resolutions": {
-    "angular": ">= 1.3.6"
+    "angular": ">= 1.3.6",
+    "moment": "^2.11.2"
   }
 }
